Negrito, itálico e sublinhado!

--- a/first_document.tex
+++ b/first_document.tex
@@ -13,7 +13,9 @@
 
 \section{First Section}
 
-Mussum Ipsum, cacilds vidis litro abertis. Copo furadis é disculpa de bebadis, arcu quam euismod magna. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Diuretics paradis num copo é motivis de denguis. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.
+Mussum Ipsum, cacilds vidis litro abertis. Copo furadis é disculpa de bebadis, arcu quam euismod magna. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Diuretics paradis num copo é motivis de denguis. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis. \textbf{Meu nome é Eduardo, isso em negrito!!!!} aqui continua normal....
+
+\emph{Emphasis text here..} \underline {Underline text here ...}
 
 
 \subsection{Second level section}
