--- a/first_document.tex
+++ b/first_document.tex
@@ -17,6 +17,38 @@ Mussum Ipsum, cacilds vidis litro abertis. Copo furadis é disculpa de bebadis, 
 
 \emph{Emphasis text here..} \underline {Underline text here ...}
 
+This document belongs to ``Sr Alencar" diary
+
+Listas:
+
+\begin{enumerate}
+\item First
+\begin{enumerate}
+\item{second level text}
+\end{enumerate}
+
+\item Second
+\item Third
+
+\end{enumerate}
+
+\begin{itemize}
+\item First
+\begin{itemize}
+\item{second level text}
+\end{itemize}
+
+\item Second
+\item Third
+
+\end{itemize}
+
+\begin{description}
+\item [Eduardo] my first name
+\item [Alencar] my last name
+\end{description}
+
+
 
 \subsection{Second level section}
 
