--- a/first_document.tex
+++ b/first_document.tex
@@ -1,4 +1,5 @@
 \documentclass{article}
+\usepackage{enumitem}
 
 % Comments are here
 
@@ -43,10 +44,11 @@ Listas:
 
 \end{itemize}
 
-\begin{description}
+\begin{description}[noitemsep]
 \item [Eduardo] my first name
 \item [Alencar] my last name
 \end{description}
+
 
 
 
